--- a/aboutus.html
+++ b/aboutus.html
@@ -16,10 +16,10 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/modernizr-2.6.2.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+//logo updated
   <style>
     .logo-img {
-      width: 100px; /* Adjust this value to your preference */
+      width: 200px; /* Adjust this value to your preference */
       height: auto; /* This will maintain the aspect ratio */
     }
     #fh5co-header-section.sticky-banner {
@@ -50,7 +50,7 @@
         <div class="nav-header">
           <!-- Hamburger Menu Icon for Mobile -->
           <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-          <h1 id="fh5co-logo"><a href="index.html"><img class="logo-img" src="img/Dernek Logo PNG.png" alt="Your Logo"></a></h1>
+          <h1 id="fh5co-logo"><a href="index.html"><img class="logo-img" src="img/asset 29.png" alt="Your Logo"></a></h1>
 
           <!-- Navigation Menu -->
           <nav id="fh5co-menu-wrap" role="navigation">
@@ -150,14 +150,14 @@
 
 
     <!-- ======= Footer ======= -->
-    <footer class="footer-section">
+    <footer class="footer-section" style="background-color: #cbd0d6;">
       <div class="container">
         <div class="footer-content pt-5 pb-5">
           <div class="row">
             <div class="col-xl-4 col-lg-4 mb-50">
               <div class="footer-widget">
                 <div class="footer-logo">
-                  <a href="index.html"><img class="logo-img" src="img/Dernek Logo PNG.png" alt="Your Logo"></a>
+                  <a href="index.html"><img class="logo-img" src="img/asset 29.png" alt="Your Logo"></a>
                 </div>
                 <div class="footer-text">
                   <p>Dernek olarak daha nice çocuğa ulaşarak onların hayallerini gerçekleştirmek istiyoruz!</p>
