--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     .logo-img {
-      width: 100px; /* Adjust this value to your preference */
+      width: 200px; /* Adjust this value to your preference */
       height: auto; /* This will maintain the aspect ratio */
     }
 
@@ -60,19 +60,18 @@
       <div class="container">
         <div class="nav-header">
           <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-          <h1 id="fh5co-logo"><a href="index.html"><img class="logo-img" src="img/Dernek Logo PNG.png" alt="Your Logo"></a></h1>
-
-
-
-
-          <!-- Navigation Menu -->
+          <h1 id="fh5co-logo"><a href="index.html"><img class="logo-img" src="img/asset 29.png" alt="Your Logo"></a></h1>
           <nav id="fh5co-menu-wrap" role="navigation">
             <ul class="sf-menu" id="fh5co-primary-menu">
               <li class="nav-item active"><a href="index.html" class="nav-link">Anasayfa</a></li>
-              <li class="nav-item"><a href="aboutus.html" class="nav-link">Hakkımızda</a></li>
+              <li class="nav-item"><a href="donation.html" class="nav-link">Hakkımızda</a>
+                <ul class="fh5co-sub-menu">
+                  <li><a href="aboutus.html">Hakkımızda</a></li>
+                  <li><a href="ÇOCUKLAR İÇİN FIRSAT EŞİTLİĞİ DERNEĞİ Tüzüğü son.pdf">Dernek Tüzüğü</a></li>
+                </ul>
+              </li>
               <li class="nav-item"><a href="projects.html" class="nav-link">Projelerimiz</a></li>
-              <li class="nav-item">
-                <a href="donation.html" class="nav-link">Destek Ol</a>
+              <li class="nav-item"><a href="donation.html" class="nav-link">Destek Ol</a>
                 <ul class="fh5co-sub-menu">
                   <li><a href="https://forms.gle/wym874aV6PyKPRER7">Maddi Bağış</a></li>
                   <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeA8tOvv-jFXWJxFdrTZVvRWjTSD0eGF365H5r2ExK5UEKtxw/viewform?usp=sf_link">Kitap Bağışı</a></li>
@@ -88,11 +87,9 @@
                   <li><a href="https://forms.gle/dJkDTiuaKpowspBi8">Gönüllü Ol</a></li>
                 </ul>
               </li>
-              <li class="nav-item"><a href="https://forms.gle/GdHasNSbzkWgAdm27" class="nav-link">Bize Ulaşın</a></li>
+              <li class="nav-item"><a href="https://forms.gle/CdCHFNFKxF37JFfKA" class="nav-link">Bize Ulaşın</a></li>
             </ul>
           </nav>
-
-
         </div>
       </div>
     </header>
@@ -100,7 +97,7 @@
 
     <div class="fh5co-hero">
       <div class="fh5co-overlay"></div>
-      <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(img/IMG_5170.jpg);">
+      <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(img/background2.jpeg);">
       </div>
     </div>
 
@@ -219,22 +216,17 @@
 
 
     <!-- Add more columns and images as needed -->
-            </div>
-          </div>
-        </div>
 
-      </div>
-    </div>
 
     <!-- ======= Footer ======= -->
-    <footer class="footer-section">
+    <footer class="footer-section" style="background-color: #cbd0d6;">
       <div class="container">
         <div class="footer-content pt-5 pb-5">
           <div class="row">
             <div class="col-xl-4 col-lg-4 mb-50">
               <div class="footer-widget">
                 <div class="footer-logo">
-                  <a href="index.html"><img class="logo-img" src="img/Dernek Logo PNG.png" alt="Your Logo"></a>
+                  <a href="index.html"><img class="logo-img" src="img/asset 29.png" alt="Your Logo"></a>
                 </div>
                 <div class="footer-text">
                   <p>Dernek olarak daha nice çocuğa ulaşarak onların hayallerini gerçekleştirmek istiyoruz!</p>
@@ -265,7 +257,7 @@
                   <li><a href="donation.html">Destek Ol</a></li>
                   <li><a href="https://forms.gle/CdCHFNFKxF37JFfKA">Bize Ulaşın</a></li>
                 </ul>
-                </ul>
+
               </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
@@ -277,7 +269,8 @@
         </div>
       </div>
 
-    </footer><!-- End Footer -->- End Footer -->
+    </footer>
+    <!-- End Footer -->
 
 
   </div>
