--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
     .logo-img {
-      width: 100px; /* Adjust this value to your preference */
+      width: 200px; /* Adjust this value to your preference */
       height: auto; /* This will maintain the aspect ratio */
     }
     #fh5co-header-section.sticky-banner {
@@ -82,18 +82,19 @@
 <header id="fh5co-header-section" class="sticky-banner">
   <div class="container">
     <div class="nav-header">
-      <!-- Hamburger Menu Icon for Mobile -->
       <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-      <h1 id="fh5co-logo"><a href="index.html"><img class="logo-img" src="img/Dernek Logo PNG.png" alt="Your Logo"></a></h1>
-
-      <!-- Navigation Menu -->
+      <h1 id="fh5co-logo"><a href="index.html"><img class="logo-img" src="img/asset 29.png" alt="Your Logo"></a></h1>
       <nav id="fh5co-menu-wrap" role="navigation">
         <ul class="sf-menu" id="fh5co-primary-menu">
           <li class="nav-item active"><a href="index.html" class="nav-link">Anasayfa</a></li>
-          <li class="nav-item"><a href="aboutus.html" class="nav-link">Hakkımızda</a></li>
+          <li class="nav-item"><a href="donation.html" class="nav-link">Hakkımızda</a>
+            <ul class="fh5co-sub-menu">
+              <li><a href="aboutus.html">Hakkımızda</a></li>
+              <li><a href="ÇOCUKLAR İÇİN FIRSAT EŞİTLİĞİ DERNEĞİ Tüzüğü son.pdf">Dernek Tüzüğü</a></li>
+            </ul>
+          </li>
           <li class="nav-item"><a href="projects.html" class="nav-link">Projelerimiz</a></li>
-          <li class="nav-item">
-            <a href="donation.html" class="nav-link">Destek Ol</a>
+          <li class="nav-item"><a href="donation.html" class="nav-link">Destek Ol</a>
             <ul class="fh5co-sub-menu">
               <li><a href="https://forms.gle/wym874aV6PyKPRER7">Maddi Bağış</a></li>
               <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSeA8tOvv-jFXWJxFdrTZVvRWjTSD0eGF365H5r2ExK5UEKtxw/viewform?usp=sf_link">Kitap Bağışı</a></li>
@@ -112,7 +113,6 @@
           <li class="nav-item"><a href="https://forms.gle/CdCHFNFKxF37JFfKA" class="nav-link">Bize Ulaşın</a></li>
         </ul>
       </nav>
-
     </div>
   </div>
 </header>
@@ -162,14 +162,14 @@
 <!-- End of main container -->
 
 <!-- ======= Footer ======= -->
-<footer class="footer-section">
+<footer class="footer-section" style="background-color: #cbd0d6;">
   <div class="container">
     <div class="footer-content pt-5 pb-5">
       <div class="row">
         <div class="col-xl-4 col-lg-4 mb-50">
           <div class="footer-widget">
             <div class="footer-logo">
-              <a href="index.html"><img class="logo-img" src="img/Dernek Logo PNG.png" alt="Your Logo"></a>
+              <a href="index.html"><img class="logo-img" src="img/asset 29.png" alt="Your Logo"></a>
             </div>
             <div class="footer-text">
               <p>Dernek olarak daha nice çocuğa ulaşarak onların hayallerini gerçekleştirmek istiyoruz!</p>
