--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/modernizr-2.6.2.min.js"></script>
   <script src="https://kit.fontawesome.com/340cef720c.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     .logo-img {
       width: 200px; /* Adjust this value to your preference */
