--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html class="no-js">
 <head>
   <meta charset="utf-8">
@@ -9,21 +8,27 @@
   <meta name="description" content="Free HTML5 Template" />
   <meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
   <meta name="author" content="eocs" />
+
+  <!-- Ensure the icon path is correct and the file exists -->
   <link rel="icon" type="image/png" href="images/icon.png">
+
+  <!-- Check if these paths are correct and the files exist in your repo -->
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/icomoon.css">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/superfish.css">
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Ensure these scripts are loading correctly -->
   <script src="js/modernizr-2.6.2.min.js"></script>
   <script src="https://kit.fontawesome.com/340cef720c.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
   <style>
     .logo-img {
       width: 200px; /* Adjust this value to your preference */
       height: auto; /* This will maintain the aspect ratio */
     }
-
 
     #fh5co-album {
       padding-top: 50px; /* Adjust the top padding to control the space between the text and the photo album */
@@ -40,17 +45,10 @@
       max-width: 100%;
       height: auto;
     }
+
     .heading-section.animate-box {
       padding-bottom: 5px; /* Adjust this value to your preference */
     }
-
-
-
-
-
-
-
-
   </style>
 </head>
 <body>
@@ -60,7 +58,10 @@
       <div class="container">
         <div class="nav-header">
           <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark"><i></i></a>
-          <h1 id="fh5co-logo"><a href="index.html"><img class="logo-img" src="img/asset 29.png" alt="Your Logo"></a></h1>
+          <h1 id="fh5co-logo">
+            <!-- Ensure the image path is correct -->
+            <a href="index.html"><img class="logo-img" src="img/asset 29.png" alt="Your Logo"></a>
+          </h1>
           <nav id="fh5co-menu-wrap" role="navigation">
             <ul class="sf-menu" id="fh5co-primary-menu">
               <li class="nav-item active"><a href="index.html" class="nav-link">Anasayfa</a></li>
@@ -81,7 +82,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a href="#" class="nav-link">Bize Katıl</a> <!-- Changed href to "#" to indicate it's a dropdown -->
+                <a href="#" class="nav-link">Bize Katıl</a>
                 <ul class="fh5co-sub-menu">
                   <li><a href="https://forms.gle/U7yd8mKn1bgk4etq5">Üretim Ekibimize Katıl</a></li>
                   <li><a href="https://forms.gle/dJkDTiuaKpowspBi8">Gönüllü Ol</a></li>
@@ -94,27 +95,24 @@
       </div>
     </header>
 
-
     <div class="fh5co-hero">
       <div class="fh5co-overlay"></div>
-      <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(img/background2.jpeg);">
-      </div>
+      <div class="fh5co-cover text-center" data-stellar-background-ratio="0.5" style="background-image: url(img/background2.jpeg);"></div>
     </div>
 
     <div id="fh5co-feature-product" class="fh5co-section-gray">
       <div class="container">
         <div class="row">
-          <div class="col-md-12 text-center heading-section ">
+          <div class="col-md-12 text-center heading-section">
             <h3>Çocuklar için Fırsat Eşitliği Derneği</h3>
-
           </div>
         </div>
         <div class="row">
           <div class="col-md-4">
             <div class="feature-left">
-								<span class="icon">
-									<i class="icon-profile-male"></i>
-								</span>
+              <span class="icon">
+                <i class="icon-profile-male"></i>
+              </span>
               <div class="feature-copy">
                 <h3>Biz Kimiz</h3>
                 <p>Çocuklar İçin Fırsat Eşitliği Derneği, hayal gücü ve azimle dolu bir başlangıcın ürünüdür.</p>
@@ -124,21 +122,21 @@
           </div>
           <div class="col-md-4">
             <div class="feature-left">
-								<span class="icon">
-									<i class="icon-happy"></i>
-								</span>
+              <span class="icon">
+                <i class="icon-happy"></i>
+              </span>
               <div class="feature-copy">
                 <h3>Bize Katıl</h3>
-                <p>çocukların hayatlarına dokunarak onlara daha eşit bir dünyayı yaratmaya var mısın?</p>
-                <p><a href=https://forms.gle/vjyM4KpuyVjY22rC7>Learn More</a></p>
+                <p>Çocukların hayatlarına dokunarak onlara daha eşit bir dünyayı yaratmaya var mısın?</p>
+                <p><a href="https://forms.gle/vjyM4KpuyVjY22rC7">Learn More</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4">
             <div class="feature-left">
-								<span class="icon">
-									<i class="icon-wallet"></i>
-								</span>
+              <span class="icon">
+                <i class="icon-wallet"></i>
+              </span>
               <div class="feature-copy">
                 <h3>Destek Ol</h3>
                 <p>Derneğimize bağış yaparak dezavantajlı çocukların geleceğine umut olun.</p>
@@ -161,34 +159,35 @@
         <div class="row">
           <div class="col-md-4">
             <div class="album-item">
-              <img src=img/IMG_0514.jpg alt="Image 1">
+              <!-- Ensure image paths are correct -->
+              <img src="img/IMG_0514.jpg" alt="Image 1">
             </div>
           </div>
           <div class="col-md-4">
             <div class="album-item">
-              <img src=img/IMG_2673.jpg alt="Image 2">
+              <img src="img/IMG_2673.jpg" alt="Image 2">
             </div>
           </div>
           <div class="col-md-4">
             <div class="album-item">
-              <img src=img/IMG_8901.jpg alt="Image 3">
+              <img src="img/IMG_8901.jpg" alt="Image 3">
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-4">
             <div class="album-item">
-              <img src=img/_DSF0329.jpeg alt="Image 4">
+              <img src="img/_DSF0329.jpeg" alt="Image 4">
             </div>
           </div>
           <div class="col-md-4">
             <div class="album-item">
-              <img src=img/IMG_0025.jpg alt="Image 5">
+              <img src="img/IMG_0025.jpg" alt="Image 5">
             </div>
           </div>
           <div class="col-md-4">
             <div class="album-item">
-              <img src=img/_DSF0306.jpeg alt="Image 6">
+              <img src="img/_DSF0306.jpeg" alt="Image 6">
             </div>
           </div>
         </div>
@@ -200,23 +199,19 @@
           </div>
           <div class="col-md-4">
             <div class="album-item">
-              <img src=img/IMG_8909.jpg alt="Image 8">
+              <img src="img/IMG_8909.jpg" alt="Image 8">
             </div>
           </div>
           <div class="col-md-4">
             <div class="album-item">
-              <img src=img/IMG_6544.jpg alt="Image 9">
+              <img src="img/IMG_6544.jpg" alt="Image 9">
             </div>
           </div>
         </div>
       </div>
     </div>
 
-
-
-
     <!-- Add more columns and images as needed -->
-
 
     <!-- ======= Footer ======= -->
     <footer class="footer-section" style="background-color: #cbd0d6;">
@@ -240,8 +235,6 @@
                     <i class="fas fa-envelope"></i> cocuklaricinfirsatesitligi@gmail.com
                   </a>
                 </div>
-
-
               </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-30">
@@ -257,24 +250,20 @@
                   <li><a href="donation.html">Destek Ol</a></li>
                   <li><a href="https://forms.gle/CdCHFNFKxF37JFfKA">Bize Ulaşın</a></li>
                 </ul>
-
               </div>
             </div>
             <div class="col-xl-4 col-lg-4 col-md-6 mb-50">
-              <div class="footer-widget">
-
-              </div>
+              <div class="footer-widget"></div>
             </div>
           </div>
         </div>
       </div>
-
     </footer>
     <!-- End Footer -->
-
-
   </div>
 </div>
+
+<!-- Ensure these scripts are loading correctly -->
 <script src="js/jquery.min.js"></script>
 <script src="js/jquery.easing.1.3.js"></script>
 <script src="js/bootstrap.min.js"></script>
@@ -284,7 +273,6 @@
 <script src="js/hoverIntent.js"></script>
 <script src="js/superfish.js"></script>
 <script src="js/main.js"></script>
-
 
 </body>
 </html>
